# projeto-cg

./: .gitignore  CMakeLists.txt  Makefilewin  README.md  camera.c  camera.h  draw-house.c  drawObj.c  drawObj.h  import-objetos.c  main.c  movimento-camera.c  movimento-camera.h  teste.c
objetos/fogao/: fogao.mtl
objetos/geladeira/: geladeira.blend  geladeira.mtl
objetos/mesa/: mesa.mtl
objetos/microondas/: microondas.mtl
objetos/tapete/: tapete.mtl
sources/: cam_movement.c  draw_objects.c  obj_import.c
